--- a/find_me_a_tv/package.json
+++ b/find_me_a_tv/package.json
@@ -7,11 +7,13 @@
     "bootstrap": "^4.3.1",
     "compass": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "pg": "^7.12.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "secure-env": "^1.0.0",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
